--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,51 +1,52 @@
 {% set version = "1.1.4" %}
 
 package:
-    name: paegan
-    version: {{ version }}
+  name: paegan
+  version: {{ version }}
 
 source:
-    fn: paegan-{{ version }}.tar.gz
-    url: https://pypi.python.org/packages/source/p/paegan/paegan-{{ version }}.tar.gz
-    md5: b535ca51296e7071d6d5771c5eefed92
+  fn: paegan-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/p/paegan/paegan-{{ version }}.tar.gz
+  sha256: a9d7308315274734738ff32e09611e2799c6136ad41f0b1f1865a7b8db693ba6
 
 build:
-    number: 0
-    script: python setup.py install --single-version-externally-managed --record record.txt
+  number: 0
+  script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
-    build:
-        - python
-        - setuptools
-    run:
-        - python
-        - numpy
-        - scipy
-        - netcdf4
-        - shapely
-        - pytz
-        - python-dateutil
+  build:
+    - python
+    - setuptools
+  run:
+    - python
+    - numpy
+    - scipy
+    - netcdf4
+    - shapely
+    - pytz
+    - python-dateutil
 
 test:
-    imports:
-        - paegan
-        - paegan.logger
-        - paegan.roms
-        - paegan.cdm.grids
-        - paegan.cdm
-        - paegan.external
-        - paegan.cdm.dsg.collections.base
-        - paegan.utils
-        - paegan.cdm.dsg.features.base
-        - paegan.cdm.dsg.features
-        - paegan.cdm.dsg.collections
-        - paegan.cdm.dsg
+  imports:
+    - paegan
+    - paegan.logger
+    - paegan.roms
+    - paegan.cdm.grids
+    - paegan.cdm
+    - paegan.external
+    - paegan.cdm.dsg.collections.base
+    - paegan.utils
+    - paegan.cdm.dsg.features.base
+    - paegan.cdm.dsg.features
+    - paegan.cdm.dsg.collections
+    - paegan.cdm.dsg
 
 about:
-    home: https://github.com/axiom-data-science/paegan
-    license: GNU General Public License v3 (GPLv3)
-    summary: Paegan - The Python CDM for Met/Ocean data
+  home: https://github.com/axiom-data-science/paegan
+  license: GPL-3.0
+  license_file: LICENSE.txt
+  summary: 'Paegan - The Python CDM for Met/Ocean data.'
 
 extra:
-    recipe-maintainers:
-        - ocefpaf
+  recipe-maintainers:
+    - ocefpaf
